fixed bug by overflow

--- a/styles/general.css
+++ b/styles/general.css
@@ -4,7 +4,7 @@ p, h1, h2, h3 {
     color: rgb(230 213 184);
 }
 
-html, body {
+html {
     max-width: 100%;
     overflow-x: hidden;
 }
