--- a/styles/main.css
+++ b/styles/main.css
@@ -211,9 +211,9 @@ section {
 .contact-body {
     display: flex;
     flex: 1;
-    width: 800px;
     flex-direction: row;
     justify-content: space-between;
+    gap: 10%;
 }
 
 .contact-body div {
